Update list of Fedora builds.

--- a/downloads.html
+++ b/downloads.html
@@ -518,21 +518,6 @@
                             
                             <h2>Fedora packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
 
-                            <h3>Fedora 27 (64-bit only)</h3>
-                            <pre>
-                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_27/</code></small>
-                            </pre>
-                            
-                            <h3>Fedora 28 (64-bit only)</h3>
-                            <pre>
-                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_28/</code></small>
-                            </pre>
-
-                            <h3>Fedora 29 (x86_64, i586, armv7l, aarch64, ppc64le)</h3>
-                            <pre>
-                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_29/</code></small>
-                            </pre>
-
                             <h3>Fedora 30 (x86_64, i586, armv7l, aarch64, ppc64le)</h3>
                             <pre>
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_30/</code></small>
@@ -543,7 +528,17 @@
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_31/</code></small>
                             </pre>
 
-                            <h3>Fedora Rawhide</h3>
+                            <h3>Fedora 32 (x86_64, armv7l, aarch64, ppc64le)</h3>
+                            <pre>
+                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_32/</code></small>
+                            </pre>
+
+                            <h3>Fedora 33 (x86_64, armv7l, aarch64, ppc64le)</h3>
+                            <pre>
+                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_33/</code></small>
+                            </pre>
+
+                            <h3>Fedora Rawhide (x86_64, i586)</h3>
                             <pre>
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_Rawhide/</code></small>
                             </pre>
