Update Ubuntu 20.10 with aarch64.

--- a/downloads.html
+++ b/downloads.html
@@ -494,7 +494,7 @@
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_20.04/ ./</code></small>
                             </pre>
 
-                            <h3>Ubuntu 20.10</h3>
+                            <h3>Ubuntu 20.10 (x86_64, aarch64)</h3>
                             <pre>
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_20.10/ ./</code></small>
                             </pre>
