--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -52,6 +52,17 @@
         </dl>
       </article>
       <article>
+        <h2>Lists</h2>
+        <dl>
+          <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/General#Vectors">list = [&hellip;, &hellip;, &hellip;];</a></code></dt>
+          <dd>&nbsp;&nbsp;create a list</dd>
+          <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/General#Vectors">var = list[2];</a></code></dt>
+          <dd>&nbsp;&nbsp;index a list (from 0)</dd>
+          <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/General#Vectors">var = list.z;</a></code></dt>
+          <dd>&nbsp;&nbsp;dot notation indexing</dd>
+        </dl>
+      </article>
+      <article>
         <h2>Special variables</h2>
         <dl>
           <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24fa.2C_.24fs_and_.24fn">$fa</a></code></dt>
