Add more links.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -122,7 +122,8 @@
         <img class="libimg" width="200" src="images/TechnicalModellingWithOpenSCAD.jpg" align="right">
         <h2>Technical Modelling with OpenSCAD</h2>
         <ul>
-          <li>Author: Tam Hanna
+          <li>
+            Author: Tam Hanna
             &nbsp <a href="https://twitter.com/tamhanna"><span class="fab fa-twitter"></span></a>
             &nbsp <a href="https://www.instagram.com/tam.hanna/"><span class="fab fa-instagram"></span></a>
           </li>
@@ -142,8 +143,14 @@
       <p>
         <h2>OpenSCAD Cookbook</h2>
         <ul>
-          <li>Author: John Clark Craig</li>
-          <li>Publisher: Independently published</li>
+          <li>
+            Author: John Clark Craig
+            &nbsp <a href="https://openscadbook.com/"><span class="fas fa-globe"></span></a>
+          </li>
+          <li>
+            Publisher: Books To Believe In
+            &nbsp <a href="https://bookstobelievein.com/"><span class="fas fa-external-link-alt"</span></span></a>
+          </li>
           <li>Date: November 2018</li>
           <li>ISBN: 978-1-79-027391-1</li>
         </ul>
@@ -153,7 +160,13 @@
       <p>
         <h2>OpenSCAD for 3D Printing</h2>
         <ul>
-          <li>Author: Al Williams</li>
+          <li>
+            Author: Al Williams
+            &nbsp <a href="https://twitter.com/awce_com"><span class="fab fa-twitter"></span></a>
+            &nbsp <a href="http://www.awce.com/"><span class="fas fa-globe"></span></a>
+            &nbsp <a href="https://www.youtube.com/user/wd5gnr"><span class="fab fa-youtube"></span></a>
+            &nbsp <a href="https://github.com/wd5gnr"><span class="fab fa-github"></span></a>
+          </li>
           <li>Publisher: Createspace</li>
           <li>Date: July 2014</li>
           <li>ISBN: 978-1-50-058247-0</li>
