--- a/documentation-books.html
+++ b/documentation-books.html
@@ -105,6 +105,7 @@
 
     <section id="books-english">
       <h1>English</h1>
+      <p style="clear: both"><br></p>
       <p>
         <h2>Understanding OpenSCAD</h2>
         <ul>
@@ -117,7 +118,8 @@
         </ul>
         <p>Order from <a href="https://www.bod.de/buchshop/understanding-openscad-alicia-noors-9783752685602">Books on Demand</a></p>
         <p>Order from <a href="https://www.amazon.de/-/en/Alicia-Noors/dp/3748172613/">Amazon</a></p>
-        </p>
+      </p>
+      <p style="clear: both"><br></p>
       <p>
         <img class="libimg" width="200" src="images/TechnicalModellingWithOpenSCAD.jpg" align="right">
         <h2>Technical Modelling with OpenSCAD</h2>
@@ -178,6 +180,7 @@
 	
     <section id="books-german">
       <h1>German / Deutsch</h1>
+      <p style="clear: both"><br></p>
       <p>
         <img class="libimg" width="200" src="images/TechnicalModellingWithOpenSCAD.de.jpg" align="right">
         <h2>Technisches Konstruieren mit OpenSCAD</h2>
