--- a/documentation-books.html
+++ b/documentation-books.html
@@ -117,7 +117,6 @@
           <li>ISBN: 978-3-75-268560-2</li>
         </ul>
         <p>Order from <a href="https://www.bod.de/buchshop/understanding-openscad-alicia-noors-9783752685602">Books on Demand</a></p>
-        <p>Order from <a href="https://www.amazon.de/-/en/Alicia-Noors/dp/3748172613/">Amazon</a></p>
       </p>
       <p style="clear: both"><br></p>
       <p>
@@ -147,6 +146,7 @@
         <ul>
           <li>
             Author: John Clark Craig
+            &nbsp <a href="https://twitter.com/solarprogrammer"><span class="fab fa-twitter"></span></a>
             &nbsp <a href="https://openscadbook.com/"><span class="fas fa-globe"></span></a>
           </li>
           <li>
