Add 2 more books.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -142,6 +142,28 @@
       </p>
       <p style="clear: both"><br></p>
       <p>
+        <h2>Creating 3D Models for 3D Printing Using OpenSCAD</h2>
+        <ul>
+          <li>Author: David Leithauser</li>
+          <li>Publisher: Leithauser Research</li>
+          <li>Date: October 2020</li>
+          <li>ISBN: 979-8-55-333291-4</li>
+        </ul>
+        <p>Order from <a href="https://www.amazon.com/Creating-Models-Printing-Using-OpenSCAD/dp/B08M7JBHF6">Amazon</a></p>
+      </p>
+      <p style="clear: both"><br></p>
+      <p>
+        <h2>OpenSCAD Basics Tutorial</h2>
+        <ul>
+          <li>Author: Kishore Topu</li>
+          <li>Publisher: Tutorial Books</li>
+          <li>Date: August 2020</li>
+          <li>ISBN: 978-1-39-398880-9</li>
+        </ul>
+        <p>Order from <a href="https://www.amazon.com/OpenSCAD-Basics-Tutorial-Books/dp/B08FRMM7PY/">Amazon</a></p>
+      </p>
+      <p style="clear: both"><br></p>
+      <p>
         <h2>OpenSCAD Cookbook</h2>
         <ul>
           <li>
