Add book title image for "OpenSCAD for 3D Printing".

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -182,6 +182,7 @@
       </p>
       <p style="clear: both"><br></p>
       <p>
+        <img class="libimg" width="200" src="images/OpenSCADFor3dPrinting.jpg" align="right">
         <h2>OpenSCAD for 3D Printing</h2>
         <ul>
           <li>
