Add book title image for "OpenSCAD Basics Tutorial".

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -153,6 +153,7 @@
       </p>
       <p style="clear: both"><br></p>
       <p>
+        <img class="libimg" width="200" src="images/OpenSCADBasicsTutorial.jpg" align="right">
         <h2>OpenSCAD Basics Tutorial</h2>
         <ul>
           <li>Author: Kishore Topu</li>
