Add book title image for "Creating 3D Models for 3D Printing Using OpenSCAD".

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -20,8 +20,7 @@
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/waypoints-sticky.min.js"></script>
 
-	<script src="assets/js/documentation.js"></script>	
-	<script src="assets/js/header.js"></script>
+        <script src="assets/js/documentation-books.js"></script>
         <script type="text/javascript">
           var _gaq = _gaq || [];
           _gaq.push(['_setAccount', 'UA-26999768-1']);
@@ -108,6 +107,7 @@
       <p style="clear: both"><br></p>
       <p>
         <h2>Understanding OpenSCAD</h2>
+        <div class="book-data">
         <ul>
           <li>Author: Alicia Noors</li>
           <li>Publisher: Books on Demand
@@ -116,15 +116,16 @@
           <li>Date: November 2020</li>
           <li>ISBN: 978-3-75-268560-2</li>
         </ul>
+        </div>
         <p>Order from <a href="https://www.bod.de/buchshop/understanding-openscad-alicia-noors-9783752685602">Books on Demand</a></p>
       </p>
       <p style="clear: both"><br></p>
       <p>
         <img class="libimg" width="200" src="images/TechnicalModellingWithOpenSCAD.jpg" align="right">
         <h2>Technical Modelling with OpenSCAD</h2>
+        <div class="book-data">
         <ul>
-          <li>
-            Author: Tam Hanna
+          <li>Author: Tam Hanna
             &nbsp <a href="https://twitter.com/tamhanna"><span class="fab fa-twitter"></span></a>
             &nbsp <a href="https://www.instagram.com/tam.hanna/"><span class="fab fa-instagram"></span></a>
           </li>
@@ -134,6 +135,7 @@
           <li>Date: October 2020</li>
           <li>ISBN: 978-1-90-792099-8</li>
         </ul>
+        </div>
         <p>Buy directly from the Author:
           <a href="https://www.elektor.com/technical-modeling-with-openscad">Book</a> /
           <a href="https://www.elektor.com/technical-modeling-with-openscad-e-book">PDF</a>
@@ -142,52 +144,73 @@
       </p>
       <p style="clear: both"><br></p>
       <p>
+        <img class="libimg" width="200" src="images/Creating3DModelsFor3DPrintingUsingOpenSCAD.jpg" align="right">
         <h2>Creating 3D Models for 3D Printing Using OpenSCAD</h2>
+        <div class="book-data">
         <ul>
           <li>Author: David Leithauser</li>
           <li>Publisher: Leithauser Research</li>
           <li>Date: October 2020</li>
           <li>ISBN: 979-8-55-333291-4</li>
         </ul>
+        </div>
         <p>Order from <a href="https://www.amazon.com/Creating-Models-Printing-Using-OpenSCAD/dp/B08M7JBHF6">Amazon</a></p>
       </p>
       <p style="clear: both"><br></p>
       <p>
+        <div class="book-desc">
         <img class="libimg" width="200" src="images/OpenSCADBasicsTutorial.jpg" align="right">
         <h2>OpenSCAD Basics Tutorial</h2>
+        <p>
+          OpenSCAD is a widely used open-source CAD modeler. This book is an introduction
+          to the OpenSCAD. This fast-paced book helps you to create models easily using
+          basic shapes, transformations, and Boolean operations.
+        </p>
+        <p>As you work through the book, you will learn how to:</p>
+        <p>
+        <ul>
+          <li>Get started with modeling using OpenSCAD
+          <li>Use 2D and 3D shapes to create models
+          <li>Use hull and minkowski functions to create complex shapes
+          <li>Create patterns
+        </ul>
+        </p>
+        </div>
+        <div class="book-data">
         <ul>
           <li>Author: Kishore Topu</li>
           <li>Publisher: Tutorial Books</li>
           <li>Date: August 2020</li>
           <li>ISBN: 978-1-39-398880-9</li>
         </ul>
+        </div>
         <p>Order from <a href="https://www.amazon.com/OpenSCAD-Basics-Tutorial-Books/dp/B08FRMM7PY/">Amazon</a></p>
       </p>
       <p style="clear: both"><br></p>
       <p>
         <h2>OpenSCAD Cookbook</h2>
+        <div class="book-data">
         <ul>
-          <li>
-            Author: John Clark Craig
+          <li>Author: John Clark Craig
             &nbsp <a href="https://twitter.com/solarprogrammer"><span class="fab fa-twitter"></span></a>
             &nbsp <a href="https://openscadbook.com/"><span class="fas fa-globe"></span></a>
           </li>
-          <li>
-            Publisher: Books To Believe In
+          <li>Publisher: Books To Believe In
             &nbsp <a href="https://bookstobelievein.com/"><span class="fas fa-external-link-alt"</span></span></a>
           </li>
           <li>Date: November 2018</li>
           <li>ISBN: 978-1-79-027391-1</li>
         </ul>
+        </div>
         <p>Order from <a href="https://www.amazon.com/OpenSCAD-Cookbook-Recipes-learning-modeling/dp/1790273919/">Amazon</a></p>
       </p>
       <p style="clear: both"><br></p>
       <p>
         <img class="libimg" width="200" src="images/OpenSCADFor3dPrinting.jpg" align="right">
         <h2>OpenSCAD for 3D Printing</h2>
+        <div class="book-data">
         <ul>
-          <li>
-            Author: Al Williams
+          <li>Author: Al Williams
             &nbsp <a href="https://twitter.com/awce_com"><span class="fab fa-twitter"></span></a>
             &nbsp <a href="http://www.awce.com/"><span class="fas fa-globe"></span></a>
             &nbsp <a href="https://www.youtube.com/user/wd5gnr"><span class="fab fa-youtube"></span></a>
@@ -197,6 +220,7 @@
           <li>Date: July 2014</li>
           <li>ISBN: 978-1-50-058247-0</li>
         </ul>
+        </div>
         <p>Order from <a href="https://www.amazon.com/OpenSCAD-3D-Printing-Al-Williams/dp/1500582476/">Amazon</a></p>
       </p>
       <p style="clear: both"><br></p>
@@ -208,6 +232,7 @@
       <p>
         <img class="libimg" width="200" src="images/TechnicalModellingWithOpenSCAD.de.jpg" align="right">
         <h2>Technisches Konstruieren mit OpenSCAD</h2>
+        <div class="book-data">
         <ul>
           <li>Autor: Tam Hanna
             &nbsp <a href="https://twitter.com/tamhanna"><span class="fab fa-twitter"></span></a>
@@ -219,6 +244,7 @@
           <li>Datum: Oktober 2020</li>
           <li>ISBN: 978-3-89-576396-0</li>
         </ul>
+        </div>
         <p>Direkt vom Autor kaufen:
           <a href="https://www.elektor.de/technisches-konstruieren-mit-openscad">Buch</a> /
           <a href="https://www.elektor.de/technisches-konstruieren-mit-openscad-pdf">PDF</a>
@@ -228,6 +254,7 @@
       <p style="clear: both"><br></p>
       <p>
         <h2>OpenSCAD verstehen und richtig anwenden</h2>
+        <div class="book-data">
         <ul>
           <li>Autor: Alicia Noors</li>
           <li>Herausgeber: Books on Demand
@@ -235,6 +262,7 @@
           <li>Datum: Januar 2019</li>
           <li>ISBN: 978-3-74-817261-1</li>
         </ul>
+        </div>
       </p>
       <p>Bestellen bei <a href="https://www.bod.de/buchshop/openscad-verstehen-und-richtig-anwenden-alicia-noors-9783748172611">Books on Demand</a></p>
       <p>Bestellen bei <a href="https://www.amazon.de/-/en/Alicia-Noors/dp/3748172613/">Amazon</a></p>
