Add book summary.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -144,8 +144,25 @@
       </p>
       <p style="clear: both"><br></p>
       <p>
+        <div class="book-desc">
         <img class="libimg" width="200" src="images/Creating3DModelsFor3DPrintingUsingOpenSCAD.jpg" align="right">
         <h2>Creating 3D Models for 3D Printing Using OpenSCAD</h2>
+        <p>
+          In this book, I take you through the process of creating 3D models with OpenSCAD
+          in a step by step manner that I think you will find easy to follow. I will
+          concentrate on the aspects that I find most useful for generating 3D models
+          suitable for 3D printing. I will not get into aspects of OpenSCAD designed to
+          make pictures or 3D movies, such as coloring objects or animation, unless they
+          have some use as a modeling design tool.
+        </p>
+        <p>
+          I end the book with a series of chapters called the project section that
+          describe how to make a variety of actual objects that you can use. These
+          give you examples of how to put together the techniques I have discussed in
+          the earlier chapters, and also provide useful components like connectors and
+          moving parts that you can incorporate in your own projects.
+        </p>
+        </div>
         <div class="book-data">
         <ul>
           <li>Author: David Leithauser</li>
