--- a/documentation-books.html
+++ b/documentation-books.html
@@ -111,7 +111,7 @@
         <ul>
           <li>Author: Alicia Noors</li>
           <li>Publisher: Books on Demand
-            &nbsp <a href="https://www.bod.de/"><span class="fas fa-external-link-alt"</span></span></a>
+            &nbsp <a href="https://www.bod.de/"><span class="fas fa-external-link-alt"</span></a>
           </li>
           <li>Date: November 2020</li>
           <li>ISBN: 978-3-75-268560-2</li>
@@ -130,7 +130,7 @@
             &nbsp <a href="https://www.instagram.com/tam.hanna/"><span class="fab fa-instagram"></span></a>
           </li>
           <li>Publisher: Elektor
-            &nbsp <a href="https://www.elektor.com/"><span class="fas fa-external-link-alt"</span></span></a>
+            &nbsp <a href="https://www.elektor.com/"><span class="fas fa-external-link-alt"</span></a>
           </li>
           <li>Date: October 2020</li>
           <li>ISBN: 978-1-90-792099-8</li>
@@ -166,7 +166,8 @@
         <div class="book-data">
         <ul>
           <li>Author: David Leithauser</li>
-          <li>Publisher: Leithauser Research</li>
+          <li>Publisher: Leithauser Research
+            &nbsp <a href="https://leithauserresearch.com/"><span class="fas fa-external-link-alt"</span></a>
           <li>Date: October 2020</li>
           <li>ISBN: 979-8-55-333291-4</li>
         </ul>
@@ -213,7 +214,7 @@
             &nbsp <a href="https://openscadbook.com/"><span class="fas fa-globe"></span></a>
           </li>
           <li>Publisher: Books To Believe In
-            &nbsp <a href="https://bookstobelievein.com/"><span class="fas fa-external-link-alt"</span></span></a>
+            &nbsp <a href="https://bookstobelievein.com/"><span class="fas fa-external-link-alt"</span></a>
           </li>
           <li>Date: November 2018</li>
           <li>ISBN: 978-1-79-027391-1</li>
@@ -233,7 +234,8 @@
             &nbsp <a href="https://www.youtube.com/user/wd5gnr"><span class="fab fa-youtube"></span></a>
             &nbsp <a href="https://github.com/wd5gnr"><span class="fab fa-github"></span></a>
           </li>
-          <li>Publisher: Createspace</li>
+          <li>Publisher: Createspace
+            &nbsp <a href="https://www.createspace.com/"><span class="fas fa-external-link-alt"</span></a>
           <li>Date: July 2014</li>
           <li>ISBN: 978-1-50-058247-0</li>
         </ul>
@@ -275,7 +277,7 @@
         <ul>
           <li>Autor: Alicia Noors</li>
           <li>Herausgeber: Books on Demand
-            &nbsp <a href="https://www.bod.de/"><span class="fas fa-external-link-alt"</span></span></a>
+            &nbsp <a href="https://www.bod.de/"><span class="fas fa-external-link-alt"</span></a>
           <li>Datum: Januar 2019</li>
           <li>ISBN: 978-3-74-817261-1</li>
         </ul>
