Use https link.

--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -161,7 +161,7 @@ label:hover .door {
 .title {
   grid-area: t;
   display: flex;
-  background: no-repeat left/90% url(http://www.openscad.org/images/openscad.png);
+  background: no-repeat left/90% url(https://www.openscad.org/images/openscad.png);
 }
 
 .header {
