Fix another https link.

--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -282,7 +282,7 @@ a.link:hover {
   <div class="header">
     <p>
       <span class="green">OpenSC</span><span class="yellow">AD</span><br><span class="gray small"><small>Advent Calendar 2020</small></span>
-      <img src="http://www.openscad.org/images/openscad.png">
+      <img src="https://www.openscad.org/images/openscad.png">
     </p>
   </div>
   <div class="day-1"><label><input type="checkbox"><div class="door"><div class="front">1</div><div class="back"></div></div><div class="content hide"><div class="link"><a href="https://files.openscad.org/advent-calendar-2020/01.scad">01.scad</a></div></div></input></label></div>
