--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -318,7 +318,7 @@ a.link:hover {
 <span class="sep">||</span>
 All scripts are licensed <a class="link" href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0</a>
 <span class="sep">||</span>
-<a class="link" href="https://github.com/openscad/openscad-advent-calendar-2020/">Design repo on github</a>
+Doors open midnight UTC
 <span class="sep">||</span>
 </div>
 </body>
