Switch day 6 to animation.

--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -228,7 +228,7 @@ a.link:hover {
 .day-3 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/03.png); }
 .day-4 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/04.png); }
 .day-5 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/05.png); }
-.day-6 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/06.png); }
+.day-6 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/06.gif); }
 .day-7 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/07.png); }
 .day-8 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/08.png); }
 .day-9 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/09.png); }
