Switch day 11 to animation.

--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -233,7 +233,7 @@ a.link:hover {
 .day-8 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/08.png); }
 .day-9 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/09.png); }
 .day-10 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/10.png); }
-.day-11 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/11.png); }
+.day-11 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/11.gif); }
 .day-12 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/12.png); }
 .day-13 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/13.png); }
 .day-14 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/14.png); }
