--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -281,7 +281,7 @@ a.link:hover {
   <div class="title"></div>
   <div class="header">
     <p>
-      <span class="green">OpenSC</span><span class="yellow">AD</span><br><span class="gray small"><small>Advent Calendar 2020</small></span>
+      <span class="green">Open</span><span class="yellow">SCAD</span><br><span class="gray small"><small>Advent Calendar 2020</small></span>
       <img src="https://www.openscad.org/images/openscad.png">
     </p>
   </div>
