--- a/downloads.html
+++ b/downloads.html
@@ -325,6 +325,12 @@
       <p>Release Candidates are builds that contain all features that will be included in the next release and are intended
         to reach a wider audience for testing before the final release.
       <p>
+      <p>Binaries are signed with GPG</p>
+      <ul>
+        <li>The OpenSCAD Developers &lt;dev@openscad.org&gt;</li>
+        <li>Key ID: 8AF822A975097442</li>
+        <li>Fingerprint: <code>B3C9 4B42 50DC 097E 9FFF 8177 8AF8 22A9 7509 7442</code></li>
+      </ul>
       <div id="rc-osx" class="subsection">
         <h2>macOS</h2>
         <div class="left, download-button">
@@ -338,7 +344,7 @@
             <h3 id="WIN32_RC_INSTALLER_NAME">OpenSCAD</h3>
           </a>
           <small>x86 (32-bit) - exe installer - </small><small id="WIN32_RC_INSTALLER_SIZE">?? MB</small><br>
-          <!-- <small><a id="WIN32_RC_INSTALLER_ASC_URL" href="">asc</a></small> - -->
+          <small><a id="WIN32_RC_INSTALLER_ASC_URL" href="">asc</a></small> -
           <small><a id="WIN32_RC_INSTALLER_SHA256_URL" href="">sha256</a></small> -
           <small><a id="WIN32_RC_INSTALLER_SHA512_URL" href="">sha512</a></small>
         </div>
@@ -347,7 +353,7 @@
             <h3 id="WIN32_RC_ZIP_NAME">OpenSCAD</h3>
           </a>
           <small>x86 (32-bit) - zip package - </small><small id="WIN32_RC_ZIP_SIZE">?? MB</small><br>
-          <!-- <small><a id="WIN32_RC_ZIP_ASC_URL" href="">asc</a></small> - -->
+          <small><a id="WIN32_RC_ZIP_ASC_URL" href="">asc</a></small> -
           <small><a id="WIN32_RC_ZIP_SHA256_URL" href="">sha256</a></small> -
           <small><a id="WIN32_RC_ZIP_SHA512_URL" href="">sha512</a></small>
         </div>
@@ -357,7 +363,7 @@
             <h3 id="WIN64_RC_INSTALLER_NAME">OpenSCAD</h3>
           </a>
           <small>x86 (64-bit) - exe installer - </small><small id="WIN64_RC_INSTALLER_SIZE">?? MB</small><br>
-          <!-- <small><a id="WIN64_RC_INSTALLER_ASC_URL" href="">asc</a></small> - -->
+          <small><a id="WIN64_RC_INSTALLER_ASC_URL" href="">asc</a></small> -
           <small><a id="WIN64_RC_INSTALLER_SHA256_URL" href="">sha256</a></small> -
           <small><a id="WIN64_RC_INSTALLER_SHA512_URL" href="">sha512</a></small>
         </div>
@@ -366,7 +372,7 @@
             <h3 id="WIN64_RC_ZIP_NAME">OpenSCAD</h3>
           </a>
           <small>x86 (64-bit) - zip package - </small><small id="WIN64_RC_ZIP_SIZE">?? MB</small><br>
-          <!-- <small><a id="WIN64_RC_ZIP_ASC_URL" href="">asc</a></small> - -->
+          <small><a id="WIN64_RC_ZIP_ASC_URL" href="">asc</a></small> -
           <small><a id="WIN64_RC_ZIP_SHA256_URL" href="">sha256</a></small> -
           <small><a id="WIN64_RC_ZIP_SHA512_URL" href="">sha512</a></small>
         </div>
@@ -378,7 +384,7 @@
             <h3 id="LIN64_RC_NAME">OpenSCAD</h3>
           </a>
           <small>x86 (64-bit) - AppImage - </small><small id="LIN64_RC_SIZE">?? MB</small><br>
-          <!-- <small><a id="LIN64_RC_ASC_URL" href="">asc</a></small> - -->
+          <small><a id="LIN64_RC_ASC_URL" href="">asc</a></small> -
           <small><a id="LIN64_RC_SHA256_URL" href="">sha256</a></small> -
           <small><a id="LIN64_RC_SHA512_URL" href="">sha512</a></small>
         </div>
@@ -390,7 +396,7 @@
             <h3 id="SRC_RC_NAME">OpenSCAD</h3>
           </a>
           <small>source code - tgz archive - </small><small id="SRC_RC_SIZE">?? MB</small><br />
-          <!-- <small><a id="SRC_RC_ASC_URL" href="">asc</a></small> - -->
+          <small><a id="SRC_RC_ASC_URL" href="">asc</a></small> -
           <small><a id="SRC_RC_SHA256_URL" href="">sha256</a></small> -
           <small><a id="SRC_RC_SHA512_URL" href="">sha512</a></small>
         </div>
