Switch day 20 to animation.

--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -242,7 +242,7 @@ a.link:hover {
 .day-17 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/17.png); }
 .day-18 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/18.png); }
 .day-19 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/19.png); }
-.day-20 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/20.png); }
+.day-20 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/20.gif); }
 .day-21 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/21.png); }
 .day-22 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/22.png); }
 .day-23 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/23.png); }
