Update system requirements for Windows.

--- a/downloads.html
+++ b/downloads.html
@@ -176,7 +176,7 @@
 
 		<section id="windows">
 			<h1>Windows</h1>
-			<p>System requirements: Windows XP or newer on x86 32/64 bit</p>
+			<p>System requirements: Windows 7 or newer on x86 32/64 bit</p>
 			<div class="left, download-button">
 				<a id="WIN32_RELEASE_INSTALLER_URL" href="https://files.openscad.org">
 			  <h3 id="WIN32_RELEASE_INSTALLER_NAME">OpenSCAD</h3></a>
