Add 0x prefix and link to gpg key.
Looks like some web based searches require the 0x prefix to find the
key by ID.

--- a/downloads.html
+++ b/downloads.html
@@ -328,7 +328,7 @@
       <p>Binaries are signed with GPG</p>
       <ul>
         <li>The OpenSCAD Developers &lt;dev@openscad.org&gt;</li>
-        <li>Key ID: 8AF822A975097442</li>
+        <li>Key ID: <a href="http://keys.gnupg.net/pks/lookup?search=0x8af822a975097442&fingerprint=on&op=index">0x8AF822A975097442</a></li>
         <li>Fingerprint: <code>B3C9 4B42 50DC 097E 9FFF 8177 8AF8 22A9 7509 7442</code></li>
       </ul>
       <div id="rc-osx" class="subsection">
