Switch day 24 to animation.

--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -246,7 +246,7 @@ a.link:hover {
 .day-21 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/21.png); }
 .day-22 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/22.png); }
 .day-23 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/23.png); }
-.day-24 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/24.png); }
+.day-24 .content { background: no-repeat center/100% url(https://files.openscad.org/advent-calendar-2020/24.gif); }
 
 .day-1 { grid-area: d1; }
 .day-2 { grid-area: d2; }
