Open all advent calendar doors.

--- a/advent-calendar-2020/index.html
+++ b/advent-calendar-2020/index.html
@@ -19,12 +19,19 @@
     document.addEventListener('DOMContentLoaded', function() {
         new Snow('#snow', { number:20, r: 2.5, v: 1 });
         date = new Date();
+        /*
         if (date.getUTCMonth() === 11) {
           for (day = 1;day <= date.getUTCDate();day++) {
             $(".day-" + day + " .content").removeClass("hide");
             $(".day-" + day + " .door").addClass("transform");
           }
         }
+        */
+	for (day = 1;day <= 24;day++) {
+	  $(".day-" + day + " .content").removeClass("hide");
+	  $(".day-" + day + " .door").addClass("transform");
+          $(".day-" + day + " input").prop("checked",true);
+	}
     });
 </script>
 <style>
@@ -318,7 +325,7 @@ a.link:hover {
 <span class="sep">||</span>
 All scripts are licensed <a class="link" href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0</a>
 <span class="sep">||</span>
-Doors open midnight UTC
+<a class="link" href="https://github.com/openscad/openscad-advent-calendar-2020/">Design repo on github</a>
 <span class="sep">||</span>
 </div>
 </body>
