--- a/downloads.html
+++ b/downloads.html
@@ -334,7 +334,13 @@
       <div id="rc-osx" class="subsection">
         <h2>macOS</h2>
         <div class="left, download-button">
-          Coming soon...
+          <a id="MAC_RC_URL" href="https://files.openscad.org">
+            <h3 id="MAC_RC_NAME">OpenSCAD</h3>
+          </a>
+          <small>64 bit Intel - dmg package - </small><small id="MAC_RC_SIZE">?? MB</small><br>
+          <small><a id="MAC_RC_ASC_URL" href="">asc</a></small> -
+          <small><a id="MAC_RC_SHA256_URL" href="">sha256</a></small> -
+          <small><a id="MAC_RC_SHA512_URL" href="">sha512</a></small>
         </div>
       </div>
       <div id="rc-windows" class="subsection">
